--- a/app/src/main/res/layout/activity_location_picker.xml
+++ b/app/src/main/res/layout/activity_location_picker.xml
@@ -100,7 +100,7 @@
                 </LinearLayout>
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/btnAccept"
+                    android:id="@+id/fabBtnAccept"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="top|end"
